@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false

skinparam classAttributeIconSize 0

hide circle
hide methods

title Domain Model - US004

class Administrator {
}

class Client {
    id
    name
    vatin
    phoneNumber
    email
}

class Address {
    id
    street
    zipCode
    town
    country
}

enum CompanyType {
    type
}

enum EntityState {
    state
}

class Order {
    id
    orderDate
    deliveryDate
    price
}

Administrator "1" -- "1..*" Client : consult >
Client "*" -- "1" Address : has >
Client "*" -- "1" CompanyType : has >
Client "*" -- "1" EntityState : has >
Client "1" -- "*" Order : places >
Order "*" -- "1" Address : delivered to >

@enduml
